--- a/myproject/package.json
+++ b/myproject/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
