--- a/myproject/package.json
+++ b/myproject/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/app.ts",
+    "start": "ts-node-dev src/app2.ts",  
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
